BUG Extensions are singletons, better store policies on controller.
Thanks to @tractorcow for pointing it out.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -6,3 +6,6 @@ Injector:
     properties:
       filters:
         - '%$ControllerPolicyRequestFilter'
+ControllerPolicyApplicator:
+  dependencies:
+    RequestFilter: '%$ControllerPolicyRequestFilter'
