Update docs and class names, support array syntax.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -9,3 +9,6 @@ Injector:
 ControllerPolicyApplicator:
   dependencies:
     RequestFilter: '%$ControllerPolicyRequestFilter'
+Controller:
+  extensions:
+    - ControllerPolicyApplicator
