--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,26 @@
-# See https://github.com/silverstripe-labs/silverstripe-travis-support for setup details
+# See https://github.com/silverstripe/silverstripe-travis-support for setup details
 
 language: php
-php:
- - 5.3
 
 sudo: false
 
-env:
- - DB=MYSQL CORE_RELEASE=3.1
- - DB=PGSQL CORE_RELEASE=3.1
+matrix:
+  include:
+    - php: 5.4
+      env: DB=PGSQL CORE_RELEASE=3.4
+    - php: 5.5
+      env: DB=MYSQL CORE_RELEASE=3.5
+    - php: 5.6
+      env: DB=PGSQL CORE_RELEASE=3.6
+    - php: 7.0
+      env: DB=MYSQL CORE_RELEASE=3
+    - php: 7.1
+      env: DB=MYSQL CORE_RELEASE=3
 
 before_script:
- - git clone git://github.com/silverstripe-labs/silverstripe-travis-support.git ~/travis-support
- - php ~/travis-support/travis_setup.php --source `pwd` --target ~/builds/ss
- - cd ~/builds/ss
+  - git clone git://github.com/silverstripe/silverstripe-travis-support.git ~/travis-support
+  - php ~/travis-support/travis_setup.php --source `pwd` --target ~/builds/ss
+  - cd ~/builds/ss
 
 script:
  - vendor/bin/phpunit controllerpolicy/tests/
