--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     ],
     "require": {
         "silverstripe/framework": "~3.1"
+    },
+    "extra": {
+        "branch-alias": {
+            "1.x-dev": "1.1.x-dev"
+        }
     }
 }
