Update branch alias for 2.x-dev

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "extra": {
         "branch-alias": {
-            "1.x-dev": "1.1.x-dev"
+            "dev-master": "2.x-dev"
         }
     }
 }
