--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 /tests export-ignore
 /.travis.yml export-ignore
+/.scrutinizer.yml export-ignore
+/codecov.yml export-ignore
+/.editorconfig export-ignore
+/phpcs.xml.dist export-ignore
+/phpunit.xml.dist export-ignore
