--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,33 @@
-# See https://github.com/silverstripe/silverstripe-travis-support for setup details
-
 language: php
 
-sudo: false
+env:
+  global:
+    - COMPOSER_ROOT_VERSION="2.x-dev"
 
 matrix:
   include:
-    - php: 5.4
-      env: DB=PGSQL CORE_RELEASE=3.4
-    - php: 5.5
-      env: DB=MYSQL CORE_RELEASE=3.5
     - php: 5.6
-      env: DB=PGSQL CORE_RELEASE=3.6
+      env: DB=MYSQL PHPCS_TEST=1 PHPUNIT_TEST=1
     - php: 7.0
-      env: DB=MYSQL CORE_RELEASE=3
+      env: DB=PGSQL PHPUNIT_TEST=1
     - php: 7.1
-      env: DB=MYSQL CORE_RELEASE=3
+      env: DB=MYSQL PHPUNIT_COVERAGE_TEST=1
+    - php: 7.2
+      env: DB=MYSQL PHPUNIT_TEST=1
 
 before_script:
-  - git clone git://github.com/silverstripe/silverstripe-travis-support.git ~/travis-support
-  - php ~/travis-support/travis_setup.php --source `pwd` --target ~/builds/ss
-  - cd ~/builds/ss
+  - phpenv rehash
+  - phpenv config-rm xdebug.ini
+
+  - composer validate
+  - if [[ $DB == "PGSQL" ]]; then composer require --no-update silverstripe/postgresql 2.0.x-dev; fi
+  - composer require --no-update silverstripe/recipe-core 1.0.x-dev
+  - composer install --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
- - vendor/bin/phpunit controllerpolicy/tests/
+  - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit; fi
+  - if [[ $PHPUNIT_COVERAGE_TEST ]]; then phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml; fi
+  - if [[ $PHPCS_TEST ]]; then vendor/bin/phpcs src tests; fi
+
+after_success:
+  - if [[ $PHPUNIT_COVERAGE_TEST ]]; then bash <(curl -s https://codecov.io/bash) -f coverage.xml; fi
