FIX Update url_segment in test stubs, array syntax and expectation order

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -9,7 +9,7 @@ SilverStripe\Core\Injector\Injector:
 
 SilverStripe\ControllerPolicy\ControllerPolicyApplicator:
   dependencies:
-    SilverStripe\Control\RequestFilter: '%$SilverStripe\ControllerPolicy\ControllerPolicyRequestFilter'
+    RequestFilter: '%$SilverStripe\ControllerPolicy\ControllerPolicyRequestFilter'
 
 SilverStripe\Control\Controller:
   extensions:
