--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,7 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
