Remove obsolete branch alias

--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,7 @@
             "SilverStripe\\ControllerPolicy\\Tests\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
-    },
+    "extra": [],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
