--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: php
 
+dist: xenial
+
+services:
+  - mysql
+  - postgresql
+
 env:
   global:
     - COMPOSER_ROOT_VERSION="2.x-dev"
@@ -7,21 +13,23 @@ env:
 matrix:
   include:
     - php: 5.6
-      env: DB=MYSQL PHPCS_TEST=1 PHPUNIT_TEST=1
+      env: DB=MYSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.2.0"
     - php: 7.0
-      env: DB=PGSQL PHPUNIT_TEST=1
+      env: DB=MYSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.3.0"
     - php: 7.1
-      env: DB=MYSQL PHPUNIT_COVERAGE_TEST=1
+      env: DB=PGSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.4.0"
     - php: 7.2
-      env: DB=MYSQL PHPUNIT_TEST=1
+      env: DB=MYSQL PHPUNIT_COVERAGE_TEST=1 RECIPE_VERSION="~4.5.0"
+    - php: 7.3
+      env: DB=MYSQL PHPUNIT_TEST=1 PHPCS_TEST=1 RECIPE_VERSION="4.x-dev"
 
 before_script:
   - phpenv rehash
   - phpenv config-rm xdebug.ini
 
   - composer validate
-  - if [[ $DB == "PGSQL" ]]; then composer require --no-update silverstripe/postgresql 2.1.x-dev; fi
-  - composer require --no-update silverstripe/recipe-cms 1.2.x-dev
+  - if [[ $DB == "PGSQL" ]]; then composer require --no-update silverstripe/postgresql:^2; fi
+  - composer require --no-update silverstripe/recipe-cms:$RECIPE_VERSION
   - composer install --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
