--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,25 @@ env:
 matrix:
   include:
     - php: 5.6
-      env: DB=MYSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.2.0"
-    - php: 7.0
-      env: DB=MYSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.3.0"
+      env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
     - php: 7.1
-      env: DB=PGSQL PHPUNIT_TEST=1 RECIPE_VERSION="~4.4.0"
+      env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_COVERAGE_TEST=1 PDO=1
     - php: 7.2
-      env: DB=MYSQL PHPUNIT_COVERAGE_TEST=1 RECIPE_VERSION="~4.5.0"
+      env: DB=PGSQL RECIPE_VERSION=4.6.x-dev PHPUNIT_TEST=1
     - php: 7.3
-      env: DB=MYSQL PHPUNIT_TEST=1 PHPCS_TEST=1 RECIPE_VERSION="4.x-dev"
+      env: DB=MYSQL RECIPE_VERSION=4.6.x-dev PHPUNIT_TEST=1
+    - php: 7.4
+      env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_TEST=1
 
 before_script:
   - phpenv rehash
   - phpenv config-rm xdebug.ini
 
   - composer validate
-  - if [[ $DB == "PGSQL" ]]; then composer require --no-update silverstripe/postgresql:^2; fi
   - composer require --no-update silverstripe/recipe-cms:$RECIPE_VERSION
+  # Fix for running phpunit 5 on php 7.4+
+  - composer require --no-update sminnee/phpunit-mock-objects:^3
+  - if [[ $DB == "PGSQL" ]]; then composer require --no-update silverstripe/postgresql:^2; fi
   - composer install --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
