--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "silverstripe/framework": "^4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
+        "sminnee/phpunit": "^5",
         "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
