MNT Remove obsolete branch-alias

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "silverstripe/controllerpolicy",
     "description": "SilverStripe module providing a framework for per-controller policies. Includes a caching policy implementation that's more flexible than the Framework's default.",
     "type": "silverstripe-vendormodule",
-    "keywords": ["silverstripe", "policy", "caching"],
+    "keywords": [
+        "silverstripe",
+        "policy",
+        "caching"
+    ],
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -23,11 +27,7 @@
             "SilverStripe\\ControllerPolicy\\Tests\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
-    },
+    "extra": [],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
