--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "^4.2"
+        "silverstripe/framework": "^4.10"
     },
     "require-dev": {
-        "sminnee/phpunit": "^5",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
