--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,11 @@
         }
     ],
     "require": {
+        "php": "^7.3 || ^8.0",
         "silverstripe/framework": "^4.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
